--- a/.github/workflows/dispatchTest.yml
+++ b/.github/workflows/dispatchTest.yml
@@ -19,5 +19,6 @@ jobs:
           client-payload: |
             {
               "commit": "${{ github.event.pull_request.head.sha }}",
-              "pull_number": ${{ github.event.pull_request.number }}
+              "pull_number": ${{ github.event.pull_request.number }},
+              "labels": ${{ toJson(github.event.pull_request.labels) }}
             }
